--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.4",
     "countup.js": "^2.0.4",
+    "fastclick": "^1.0.6",
     "jquery": "^3.5.0",
     "vue": "^2.6.11",
     "vue-countup-v2": "^4.0.0"
